Backup/src/objects/Travel_Data__c.object
<CustomObject>
    <fields>
        <fullName>Activity__c</fullName>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Airline__c</fullName>
        <label>Airline</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport__c</fullName>
        <label>Airport</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Arrival_Time__c</fullName>
        <label>Arrival Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Avis_AWD__c</fullName>
        <label>Avis AWD #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avis_Wizard__c</fullName>
        <label>Avis Wizard #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cabin__c</fullName>
        <label>Cabin #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Check_In_Date__c</fullName>
        <label>Check In Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out_Date__c</fullName>
        <label>Check Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmation__c</fullName>
        <label>Confirmation #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Confirmed_Date__c</fullName>
        <label>Confirmed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Date__c</fullName>
        <label>Departure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Departure_Time__c</fullName>
        <label>Departure Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_ID__c</fullName>
        <label>Flight ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flight__c</fullName>
        <label>Flight #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gr_Transportation_Inc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gr Transportation Inc?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotel_Name__c</fullName>
        <label>Hotel Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Kitchen_needed__c</fullName>
        <label>Kitchen needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pick_up_Date__c</fullName>
        <label>Pick up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pick_up_Time__c</fullName>
        <label>Pick up Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Driver__c</fullName>
        <label>Preferred Driver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation_Name__c</fullName>
        <description>This field is used to capture reservation name</description>
        <label>Reservation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reservation__c</fullName>
        <label>Reservation #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reserved_Name__c</fullName>
        <label>Reserved Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Beds__c</fullName>
        <label># of Beds?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Free_Tix__c</fullName>
        <label># of Free Tix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Paid_Tix__c</fullName>
        <label># of Paid Tix</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Participants__c</fullName>
        <label># of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Rooms__c</fullName>
        <label># of Rooms</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>parent_wish__c</fullName>
        <label>parent wish</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Travel Data</relationshipLabel>
        <relationshipName>Travel_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Travel Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Travel Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Travel Data</pluralLabel>
    <recordTypes>
        <fullName>Activities_Excursions</fullName>
        <active>true</active>
        <label>Activities/Excursions</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cruise</fullName>
        <active>true</active>
        <label>Cruise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Flight</fullName>
        <active>true</active>
        <label>Flight</label>
    </recordTypes>
    <recordTypes>
        <fullName>Ground_Transportation</fullName>
        <active>true</active>
        <label>Ground Transportation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Limousine</fullName>
        <active>true</active>
        <label>Limousine</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lodging</fullName>
        <active>true</active>
        <label>Lodging</label>
    </recordTypes>
    <recordTypes>
        <fullName>Medical_Needs</fullName>
        <active>true</active>
        <label>Medical Needs</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rental_Car</fullName>
        <active>true</active>
        <label>Rental Car</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>